Fixed remaining carousel bugs that prevented it from rendering correctly on mobile devices

--- a/static/css/carousel.css
+++ b/static/css/carousel.css
@@ -1,16 +1,19 @@
-.carousel-control-next-icon:after
+.carousel-control.left , .carousel-control.right
 {
-  content: url(../images/right.png);
-  font-size: 55px;
-  color: red;
+  background-image: none !important;
 }
 
-.carousel-control-prev-icon:after {
-  content: url(../images/left.png);
-  font-size: 55px;
-  color: red;
+
+/* Change fill=whatever to change the arrow color */
+.carousel-control-next-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='black' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
 }
 
+.carousel-control-prev-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='black' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
+}
+
+/* This needs to be tweaked to make images look good */
 .carousel img {
     height: 540px;
     width: 625px;
